--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,31 @@
 body {
-	background-color: midnightblue;
+	background-image: url(http://s3.amazonaws.com/everystockphoto/fspid30/31/20/26/0/tileable-classic-nebula-3120260-o.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 	color: white;
 }
 
+#pagetitle {
+	text-align: center;
+}
+
 #solarSystemDiv {
-	width: 100px;
-	height: 100px;
 	display: flex;
-	flex-wrap: row-wrap;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	flex-direction: column;
+	align-items: center;
+	margin: 1%;
+}
+
+#planetDiv {
+    width: 65%;
+	padding: 10px;
+	border: 2px solid white;
+	border-radius: 10% 30% 10% 10%;
+	margin-bottom: 1%;
+}
+
+img {
+	width: 100px;
 }
