--- a/styles/main.css
+++ b/styles/main.css
@@ -19,13 +19,18 @@ body {
 }
 
 #planetDiv {
-    width: 65%;
-	padding: 10px;
+    width: 80%;
+	padding: 20px;
 	border: 2px solid white;
 	border-radius: 10% 30% 10% 10%;
 	margin-bottom: 1%;
 }
 
+.planetContent {
+	float: left;
+}
+
 img {
-	width: 100px;
+	width: 300px;
+	float: right;
 }
