--- a/styles/main.css
+++ b/styles/main.css
@@ -19,18 +19,21 @@ body {
 }
 
 #planetDiv {
-    width: 80%;
+    width: 60%;
 	padding: 20px;
 	border: 2px solid white;
-	border-radius: 10% 30% 10% 10%;
+	border-radius: 10% 25% 10% 10%;
 	margin-bottom: 1%;
 }
 
 .planetContent {
+	display: block;
+	width: 50%;
 	float: left;
 }
 
 img {
+	padding: 25px;
 	width: 300px;
 	float: right;
 }
